--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,9 +60,6 @@ a:hover {
   opacity: 0.5;
 }
 
-img {
-  min-width: 100%;
-}
 
 .title {
   text-transform: uppercase;
@@ -112,6 +109,7 @@ img {
  right: 1em;
 }
 
+
 .address {
   font-weight: bold;
   color: #642B73;
@@ -133,12 +131,18 @@ img {
 }
 
 .main-img {
-  float: left;
-  margin-right: 1em;
+  max-width: 100%;
   height: 250px;
+  width: 300px;
+  float: left;
+  margin-right: 2em;
 }
 
 @media (min-width: 900px) {
+
+  .main-img {
+   max-width: 100%;
+  }
 
   td {
     width: auto;
